   like::

      foo = 'a'                 # string
      foo = "a"                 # string
      foo = 23                  # integer
      foo = [ "a", 23, "b" ]    # list of strings and integers

   as well as::

      foo = a                   # string

   Note: if you want the string "23", then you MUST enclose it in quotes,
   otherwise it will be parsed as an integer.

2. Fixed PyBlosxomWSGIApp so that it's WSGI compliant as an application.

3. Template variables can now be delimited.  Examples::

      $foo                      - variable is "foo"
      $(foo)                    - variable is "foo"
      $(url)index.atom          - variable is "url"


Pertinent to developers:
------------------------

1. Fixed tools.importname--it now logs errors to the logger.

2. Fixed PyBlosxomWSGIApp so that it's WSGI compliant as an application.

3. Added more unit tests.


Changes between 1.4.1 and 1.4.2
===============================

Pertinent to users:
-------------------

1. Fixed another bug with the WSGI application creation code.  (Thanks
   Christine!)

2. Added instructions for installing PyBlosxom with mod_wsgi to
   ``install_wsgi.txt``.  This includes a basic wsgi script for PyBlosxom.
   (Thanks Christine!)

3. Fixed up the Python Paste installation document.  (Thanks Liz!)

4. Fixed the ``month2num`` code in tools so that PyBlosxom runs on 
   Windows (Windows doesn't have ``nl_langinfo`` in the ``locale`` 
   module).  (Thanks Liz!)


Changes between 1.4 and 1.4.1
=============================

Pertinent to users:
-------------------

1. Fixed a problem where running PyBlosxom under Paste won't pick up
   the ``config.py`` file.  Be sure to add a ``configpydir`` property to
   your ``blog.ini`` file which points to the directory your ``config.py``
   file is in.

2. Fixed a problem where running PyBlosxom in Python 2.5 won't pick up
   the ``config.py`` file.

3. Merged Ryan's optimization to Walk (removes an os.listdir call).
